--- a/task/templates/task_item.html
+++ b/task/templates/task_item.html
@@ -34,7 +34,7 @@
     </tr>
     <tr>
       <th scope="row">Description</th>
-      <td>{{ items[5] | safe }}</td>
+      <td>{{ items[5] }}</td>
     </tr>
     {% if not items[6] %}
     <tr>
